avatar cleanup completed as well as a few little color, layout and text tweaks to ensure greater readability on mobile devices (im referring to gigantor text buttons, now with moar flexibility)

--- a/public/assets/css/style.less
+++ b/public/assets/css/style.less
@@ -145,6 +145,13 @@ a.btn {
   background-color: @gray-lighter;
 }
 
+#about {
+  .well {
+    background-color: #eee;
+    border-radius: 4px;
+  }
+}
+
 header {
   &.interior .navbar {
     .navbar-brand {
